# kiss

./: .gitignore  CMakeLists.txt  Info.plist  Readme.markdown  TODO.txt  buildinfo.cmake  config.pri  doxygen.conf  index.html  kiss.pro  kiss.ts  params.json
accessory/: tinyarchive.cpp
compat/: mingw.c
devices/: CMakeLists.txt
devices/computer/: CMakeLists.txt
devices/computer/include/: Computer.h  ConsoleWidget.h  MainWindow.h
devices/computer/src/: Computer.cpp  ConsoleWidget.cpp  MainWindow.cpp  main.cpp
devices/computer/ui/: MainWindow.ui
devices/kovansim/: CMakeLists.txt
devices/kovansim/include/: Kovan.h  MainWindow.h
devices/kovansim/src/: Kovan.cpp  MainWindow.cpp
doc/: ChangeLog.txt  build.txt
docs/: CMakeLists.txt
docs/1_hello_world/: index.html
docs/1_project_overview/: index.html  metadata.ini
docs/2_existing_file/: index.html
docs/2_hello_world/: index.html  metadata.ini
docs/3_existing_file/: index.html  metadata.ini
docs/3_multiple_projects/: index.html  metadata.ini
docs/4_multiple_projects/: index.html  metadata.ini
docs/4_targets_and_cs2/: index.html
docs/5_board_file_spec/: metadata.ini
docs/5_custom_boards/: index.html  metadata.ini
docs/5_targets_and_cs2/: index.html  metadata.ini
docs/6_board_file_spec/: metadata.ini
docs/6_dependencies/: index.html  metadata.ini
docs/common/: style.css
docs/hello_world/: index.html  metadata.ini
docs/project_overview/: index.html  metadata.ini
docs/tutorial/: index.html  metadata.ini
editor/: Info.plist  editor.pro
editor/rc/: icons.qrc  kiss.rc
editor/src/: ChoosePortDialog.cpp  ChoosePortDialog.h  ChooseTargetDialog.cpp  ChooseTargetDialog.h  Debugger.cpp  Debugger.h  DebuggerInterface.h  EditorSettingsDialog.cpp  EditorSettingsDialog.h  FindDialog.cpp  FindDialog.h  KissArchive.cpp  KissArchive.h  Lexer.cpp  Lexer.h  LexerSpec.h  LexerSpecManager.cpp  LexerSpecManager.h  LexerSpecProvider.h  LexerStyles.h  MainWindow.cpp  MainWindow.h  Repository.cpp  Repository.h  SourceFile.cpp  SourceFile.h  SourceFileShared.cpp  SourceFileShared.h  Tab.cpp  Tab.h  Target.cpp  Target.h  TargetInterface.h  TargetManager.cpp  TargetManager.h  TargetSettingsDialog.cpp  TargetSettingsDialog.h  Version.h  WebTab.cpp  WebTab.h  (+3 more)
editor/ui/: ChoosePortDialog.ui  ChooseTargetDialog.ui  Debugger.ui  EditorSettingsDialog.ui  FindDialog.ui  Interaction.ui  MainWindow.ui  Repository.ui  RepositoryDialog.ui  SourceFile.ui  TargetSettingsDialog.ui
include/: Activatable.h  AudioTutorial.h  BuildOptions.h  CommunicationQueue.h  Compilation.h  Compiler.h  CompilerInterface.h  Debugger.h  DebuggerInterface.h  DeclarativeTab.h  Documentation.h  DocumentationManager.h  EditorSettingsDialog.h  FileSystemUtils.h  FindDialog.h  GccOutput.h  JavaScript.h  Kiss.h  KissArchive.h  KissRunnableArchive.h  KissStandardEnvironment.h  Lexer.h  LexerManager.h  LexerSpecManager.h  LexerSpecProvider.h  LexerStyles.h  Listenable.h  Log.h  LogStreamBuf.h  LogWindow.h  MacroString.h  MainWindow.h  NetworkInterface.h  Os.h  PluginManager.h  Project.h  ProjectManager.h  QTinyArchive.h  QUserInfo.h  Repository.h  (+70 more)
include/compiler/: CommandChain.h  Compilation.h  Compiler.h  CompilerManager.h  CompilerPluginManager.h
include/dialogs/: ChoosePortDialog.h  DeviceDialog.h  EditorSettingsDialog.h  ErrorDialog.h  FindDialog.h  LexerSettingsDialog.h  MakeTemplateDialog.h  MessageDialog.h  PasswordDialog.h  ProjectSaveAs.h  RequestFileDialog.h  SourceDialog.h  TargetDialog.h  TargetSettingsDialog.h  TemplateDialog.h  ThemeSettingsDialog.h  (+15 more)
latex/: kisside.aux  kisside.out  kisside.tex
lexers/: Info.plist  lexers.pro
libraries/: libraries.pro
optional-targets/: README.rtf  optional-targets.pro
other/: at.kiss  test  test.c  test.cpp
plugins/: CMakeLists.txt
plugins/interfaces/kovan_serial/: CMakeLists.txt  kovan_serial_interface.cpp  kovan_serial_interface.hpp
plugins/lexers/c/: CMakeLists.txt  LexerC.cpp  LexerC.h  lexer_c.cpp  lexer_c.hpp
plugins/lexers/java/: CMakeLists.txt  LexerJava.cpp  LexerJava.h  lexer_java.cpp  lexer_java.hpp
rc/: Info.plist  branding.pri  rc.qrc  rc.qrc.depends
scripts/: Applications  KISS.nsi  buildAll.sh  buildMac.sh  kiprcbc.inf  kiprlink.inf  osx_install_dylibs.sh  osx_install_names.sh  osx_packager.sh
src/: Activatable.cpp  AudioTutorial.cpp  ChoosePortDialog.cpp  ChooseTargetDialog.cpp  CommandChain.cpp  CommunicationQueue.cpp  Compilation.cpp  Compiler.cpp  Debugger.cpp  DeclarativeTab.cpp  Documentation.cpp  DocumentationManager.cpp  EditorSettingsDialog.cpp  FileSystemUtils.cpp  FindDialog.cpp  GccOutput.cpp  JavaScript.cpp  KissArchive.cpp  KissRunnableArchive.cpp  KissStandardEnvironment.cpp  Lexer.cpp  LexerManager.cpp  LexerSpecManager.cpp  Log.cpp  LogStreamBuf.cpp  LogWindow.cpp  MainWindow.cpp  Named.cpp  Project.cpp  ProjectManager.cpp  QTinyArchive.cpp  QUserInfo.cpp  Repository.cpp  ResourceHelper.cpp  SourceDialog.cpp  SourceFile.cpp  SourceFileShared.cpp  Target.cpp  TargetManager.cpp  TargetSettingsDialog.cpp  (+53 more)
targets/: targets.pro
tests/: CMakeLists.txt  CommandChainTest.cpp  OutputWidgetTest.cpp  code_editor_test.cpp  output_widget_test.cpp  project_model_test.cpp  save_as_dialog_test.cpp  template_test.cpp
trademarks/: branding.pri
ts/: KISS_zh_CN.ts
ui/: AddToProjectDialog.ui  ChoosePortDialog.ui  CompilerFlagDialog.ui  Debugger.ui  DeviceDialog.ui  Documentation.ui  EditorSettingsDialog.ui  ErrorDialog.ui  ErrorWidget.ui  FindDialog.ui  LexerSettingsDialog.ui  LogWindow.ui  MainWindow.ui  MakeTemplateDialog.ui  MessageDialog.ui  MoveProjectToDialog.ui  NewProjectDialog.ui  NewProjectWizard.ui  PasswordDialog.ui  ProjectDepDialog.ui  ProjectSaveAs.ui  ProjectSettingsDialog.ui  ProjectSettingsTab.ui  ProjectSetupDialog.ui  Repository.ui  RequestFileDialog.ui  SourceDialog.ui  SourceFile.ui  SourceFindWidget.ui  SourceLocalFailed.ui  TargetActions.ui  TargetDialog.ui  TargetSettingsDialog.ui  TemplateDialog.ui  ThemeSettingsDialog.ui  TitleDescriptionWidget.ui  VideoPlayer.ui  VideoPlayerTab.ui  WebTab.ui  communication_widget.ui  (+6 more)
(+588 files in other folders)
